[package]
name = "nfind"
version = "0.1.0"
authors = ["WG-zhangfeng <d177178179feng>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
surge-ping = "0.3.0"
rand = "0.8.4"
ipnet = "2.3.1"
clap = "2.33.3"
tokio = {version = "1.11.0",features = ["full"]}